Split V1 indexer component into landing page and simplified index overview

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,12 +39,12 @@
 							<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
 							Sign in
 						</button>
-            <button mat-flat-button (click)="loginWithDiscord()" class="discord-button">
-							<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-							Sign in with Discord
-						</button>
+            <!--<button mat-flat-button (click)="loginWithDiscord()" class="discord-button">-->
+							<!--<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>-->
+							<!--Sign in with Discord-->
+						<!--</button>-->
 						<button [disabled]="loading" routerLink="/forgot" class="btn btn-link" style="color: #18BC9C !important;">
-							Forgot password?
+							Forgot your password?
 						</button>
 						<button [disabled]="loading" routerLink="/register" class="btn btn-link" style="float: right; color: #18BC9C !important;">
 							Don't have an account? Sign up
