--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -31,7 +31,7 @@
 		</app-alert>
 
         <div *ngIf="active_tab === 'overview'">
-          <app-indexer></app-indexer>
+          <app-overview></app-overview>
         </div>
         <div *ngIf="active_tab === 'player'">
           <app-index-player></app-index-player>
