--- a/src/app/blog/blog2020/blog2020.component.html
+++ b/src/app/blog/blog2020/blog2020.component.html
@@ -42,7 +42,7 @@
 		<div class="hidden-xs col-sm-8 blog-text">
 			<h4 class="gd-primary">Other changes</h4>
 			<p>- Alliance mail list generator</p>
-			<p>- Track alliance wars</p>
+			<!--<p>- Track alliance wars</p>-->
 		</div>
 	</div>
 </div>
