--- a/src/app/shared/dialogs/basic/basic.component.html
+++ b/src/app/shared/dialogs/basic/basic.component.html
@@ -1,9 +1,22 @@
-<a (click)="dialogRef.close()" class="close"></a>
-<h1 mat-dialog-title>{{title}}</h1>
-<div mat-dialog-content>
-	<div [innerHtml]="messageHtml"></div>
+<a *ngIf="show_close" (click)="close()" class="close"></a>
+<h2 mat-dialog-title *ngIf="title != ''">
+	<span [outerHTML]="title"></span>
+</h2>
+<div mat-dialog-content *ngIf="messageHtml != ''">
+	<span [outerHTML]="messageHtml"></span>
 </div>
-<div mat-dialog-actions class="dialog-action">
+<div mat-dialog-actions class="dialog-action" *ngIf="cancel_action || action">
+
+	<!--Negative action-->
 	<button mat-button (click)="close()" *ngIf="cancel_action!=null">{{cancel_action}}</button>
-	<button mat-button class="mat-focus-indicator mat-raised-button bg-gd-2 gd-white mat-button mat-button-base" (click)="close()">{{action}}</button>
+
+	<!--Positive action-->
+	<button
+		mat-button
+		class="mat-focus-indicator mat-raised-button {{actionClass}} text-white mat-button mat-button-base"
+		(click)="confirm()"
+		style="float: right;">
+		{{action}}
+	</button>
+
 </div>
