--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -17,7 +17,7 @@
     <mat-card-content *ngIf="!notFound">
 
       <div class="alliance-cards" style="margin-bottom: 0 !important;" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card class="index-card" fxFlex="25">
+        <mat-card class="dense-card" fxFlex="25">
           <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
             <h1 class="gd-white entity-name">
 	            <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/></div> {{allianceName}}
@@ -70,10 +70,10 @@
 	                <td *ngIf="def">{{def | NumberFilter}}</td>
 		              <td *ngIf="!def">0</td>
 	              </tr>
-	              <tr *ngIf="hasIndex!=''">
+	              <tr *ngIf="hasIndex">
 	                  <th>Town intelligence</th>
 	                  <td>
-	                      <a (click)="openIntelTab()" class="a-link">{{hasIndex}} <i class="fa fa-arrow-circle-right"></i></a>
+	                      <a (click)="openIntelTab()" class="a-link">Browse intel <i class="fa fa-arrow-circle-right"></i></a>
 	                  </td>
 	              </tr>
               </tbody>
@@ -118,7 +118,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="index-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
+        <mat-card class="dense-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group mat-stretch-tabs animationDuration="0ms" [selectedIndex]="tabsIndex"
                          (click)="cdr.detectChanges();" (selectedTabChange)="onTabClick($event)">
@@ -323,9 +323,9 @@
 	              <span class="hidden-xs">Town intelligence</span>
 	              <span class="hidden-md hidden-sm hidden-lg">Intel</span>
               </ng-template>
-              <app-index-alliance *ngIf="bShowIntel && hasIndex!=''" [world]="world" [key]="hasIndex" [id]="id" [embedded]="true"></app-index-alliance>
-	            <h3 style="padding: 30px;" *ngIf="!bShowIntel && hasIndex!=''"><a class="a-link-dialog" style="color: #334254 !important;" (click)="bShowIntel = true;">Load town intel..</a></h3>
-	            <div *ngIf="hasIndex==''" style="padding: 20px;">
+              <app-index-alliance *ngIf="bShowIntel && hasIndex" [world]="world" [id]="id" [embedded]="true"></app-index-alliance>
+	            <h3 style="padding: 30px;" *ngIf="!bShowIntel && hasIndex"><a class="a-link-dialog" style="color: #334254 !important;" (click)="bShowIntel = true;">Load town intelligence..</a></h3>
+	            <div *ngIf="!bShowIntel || !hasIndex" style="padding: 20px;">
 		            <div class="container-fluid">
 			            <div class="row">
 				            <div class="col-xs-12 col-sm-8">
@@ -352,34 +352,35 @@
 
       </div>
 
-	    <div class="alliance-cards" style="" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-		    <mat-card class="index-card" fxFlex="100" style="padding-bottom: 0px !important; padding-top: 10px !important;">
-			    <mat-card-title>
-				    <div fxLayout="row">
-					    <h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Alliance wars (conquests)</span></h3>
-					    <mat-spinner style="margin-left: 30px;" *ngIf="loadingWars" strokeWidth="3" [diameter]="30"></mat-spinner>
-				    </div>
-			    </mat-card-title>
-			    <mat-card-content>
-				    <div class="conquest-card-container">
-					    <div class="conquest-card" *ngFor="let war of allianceWars">
-						    <div class="war-title">
-							    <div class="title-left">{{allianceName}}</div>
-							    <div class="title-right"><a routerLink="/alliance" [queryParams]="{world: world, id: war?.alliance_id}">{{war?.alliance_name}}</a></div>
-						    </div>
-						    <div class="war-icon">
-							    <mat-icon style="font-weight: 900;">⚔</mat-icon>
-						    </div>
-						    <div class="war-score">
-							    <div class="score-left" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'pos':'neg'}}">{{war?.towns_gained_from}}</div>
-							    <div class="score-right" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'neg':'pos'}}">{{war?.towns_lost_to}}</div>
-						    </div>
-					    </div>
-				    </div>
+	    <!--TODO: alliance wars-->
+	    <!--<div class="alliance-cards" style="" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">-->
+		    <!--<mat-card class="dense-card" fxFlex="100" style="padding-bottom: 0px !important; padding-top: 10px !important;">-->
+			    <!--<mat-card-title>-->
+				    <!--<div fxLayout="row">-->
+					    <!--<h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Alliance wars (conquests)</span></h3>-->
+					    <!--<mat-spinner style="margin-left: 30px;" *ngIf="loadingWars" strokeWidth="3" [diameter]="30"></mat-spinner>-->
+				    <!--</div>-->
+			    <!--</mat-card-title>-->
+			    <!--<mat-card-content>-->
+				    <!--<div class="conquest-card-container">-->
+					    <!--<div class="conquest-card" *ngFor="let war of allianceWars">-->
+						    <!--<div class="war-title">-->
+							    <!--<div class="title-left">{{allianceName}}</div>-->
+							    <!--<div class="title-right"><a routerLink="/alliance" [queryParams]="{world: world, id: war?.alliance_id}">{{war?.alliance_name}}</a></div>-->
+						    <!--</div>-->
+						    <!--<div class="war-icon">-->
+							    <!--<mat-icon style="font-weight: 900;">⚔</mat-icon>-->
+						    <!--</div>-->
+						    <!--<div class="war-score">-->
+							    <!--<div class="score-left" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'pos':'neg'}}">{{war?.towns_gained_from}}</div>-->
+							    <!--<div class="score-right" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'neg':'pos'}}">{{war?.towns_lost_to}}</div>-->
+						    <!--</div>-->
+					    <!--</div>-->
+				    <!--</div>-->
 
-			    </mat-card-content>
-		    </mat-card>
-	    </div>
+			    <!--</mat-card-content>-->
+		    <!--</mat-card>-->
+	    <!--</div>-->
 
 	    <!--<div style="margin: -5px 17px" *ngIf="!loadingInfo && (members > 20 || rank < 50)">-->
 		    <!--<app-advertorial></app-advertorial>-->
@@ -387,7 +388,7 @@
 
       <div class="alliance-cards" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="5px">
 
-        <mat-card class="index-card" fxFlex="60" fxFlex.gt-md="60" fxFlex.gt-xs="100">
+        <mat-card class="dense-card" fxFlex="60" fxFlex.gt-md="60" fxFlex.gt-xs="100">
           <mat-card-title>
             <div fxLayout="row">
 	            <h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Members</span></h3>
@@ -545,7 +546,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="index-card" fxFlex="40">
+        <mat-card class="dense-card" fxFlex="40">
           <mat-card-content>
 
 	          <app-conquest [embedded]="true" [params]="{type: 'alliance', world: world, id: id}"></app-conquest>
