--- a/src/app/indexer/DEPRECATED/indexer.component.html
+++ b/src/app/indexer/DEPRECATED/indexer.component.html
@@ -7,7 +7,7 @@
       </div>
   </div>
 
-  <div *ngIf="key != '' && !moved && !loading">
+  <div *ngIf="key != '' && !loading">
     <div class="index-overview">
 
       <div class="">
@@ -18,17 +18,17 @@
 	                           <!--[version]="data.latest_version" [message]="data.update_message" [key]="key"></app-index-version>-->
 
           <div class="hidden-md hidden-lg">
-            <mat-card class="index-card">
+            <mat-card class="dense-card">
               <mat-tab-group mat-stretch-tabs>
                 <mat-tab>
 	                <ng-template mat-tab-label>
-		                <img style="height: 20px; margin-top: 0;" src="../../assets/images/player_ico.png"/>&nbsp;Players
+		                <img style="height: 20px; margin-top: 0;" src="../../../assets/images/player_ico.png"/>&nbsp;Players
 	                </ng-template>
                   <ng-container *ngTemplateOutlet="players"></ng-container>
                 </mat-tab>
                 <mat-tab>
 	                <ng-template mat-tab-label>
-		                <img style="height: 20px; margin-top: 0;" src="../../assets/images/ally_ico.png"/>&nbsp;Alliances
+		                <img style="height: 20px; margin-top: 0;" src="../../../assets/images/ally_ico.png"/>&nbsp;Alliances
 	                </ng-template>
                   <ng-container *ngTemplateOutlet="allys"></ng-container>
                 </mat-tab>
@@ -62,14 +62,14 @@
 	        <!--</div>-->
 
 	        <div class="hidden-xs hidden-sm">
-		        <mat-card class="index-card conquests-card" style="padding: 17px 5px 12px !important;">
-			        <app-index-search [indexKey]="key"></app-index-search>
+		        <mat-card class="dense-card conquests-card" style="padding: 17px 5px 12px !important;">
+			        <app-index-search></app-index-search>
 		        </mat-card>
 	        </div>
 
 	        <!--recent conquests-->
 	        <div *ngIf="!loadingInfo && recent_conquests && recent_conquests.length > 0" class="hidden-xs hidden-sm">
-		        <mat-card class="index-card conquests-card">
+		        <mat-card class="dense-card conquests-card">
 			        <mat-card-title>
 				        <div class="form-group row" style='margin: 0px;'>
 					        <h3 style='font-weight: 300; color: #304357; margin-top: 0px;'><span class='world-title' style='color: #18BC9C;'>Recent sieges</span>&nbsp;&nbsp;
@@ -99,7 +99,7 @@
 
 	        <!--recent latest intel-->
 	        <div *ngIf="latest_intel && latest_intel.length>0" class="hidden-xs hidden-sm">
-				        <mat-card class="index-card" style="margin-top: 5px;">
+				        <mat-card class="dense-card" style="margin-top: 5px;">
 					        <mat-card-title>
 						        <div class="form-group row" style='margin: 0px;'>
 							        <h3 style='font-weight: 300; color: #304357; margin-top: 0px;'><span class='world-title' style='color: #18BC9C;'>Latest reports indexed</span></h3>
@@ -131,14 +131,14 @@
 
 								        <div class='row_custom' *ngFor="let town of latest_intel" style="height: 40px;">
 									        <div class="cell unit-cell-small" matTooltip="{{town.type}}" style="transform: scale(.55); margin-top: -8px;">
-										        <img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
+										        <img src="../../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
 										        <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
-											        <img src="../../assets/images/game/towninfo/attack.png">
+											        <img src="../../../assets/images/game/towninfo/attack.png">
 										        </div>
-										        <img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
-										        <img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
-										        <img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
-										        <img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
+										        <img src="../../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
+										        <img src="../../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
+										        <img src="../../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
+										        <img src="../../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
 									        </div>
 									        <div class="cell">
 										        <a routerLink="/intel/town/{{world}}/{{town?.town_id}}">{{town?.town_name}}</a>
@@ -173,11 +173,11 @@
         </div>
 
         <ng-template #info>
-          <mat-card class="index-card" style="max-height: 400px; height: 400px; min-height: 400px;">
+          <mat-card class="dense-card" style="max-height: 400px; height: 400px; min-height: 400px;">
 	          <div class="card-header bg-gd-4">
 		          <h1 class="entity-name gd-white">Enemy city index</h1>
 		          <h3>
-			          <div class="icon-circle"><img style="height: 24px; margin: 8px;" src="../../assets/images/ally_ico.png"/></div>
+			          <div class="icon-circle"><img style="height: 24px; margin: 8px;" src="../../../assets/images/ally_ico.png"/></div>
 			          &nbsp;{{index_name}}
 		          </h3>
 		          <div class="a-link card-action gd-white" matTooltip="Index settings" (click)="showEditOwnersDialog()">
@@ -194,7 +194,9 @@
 	                </tr>
 	                <tr>
 	                  <th>World</th>
-	                  <td><div class="bg-flag flag-inline flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="decorated" routerLink="/points" [queryParams]="{world: world}">{{world}}</a></td>
+	                  <td>
+		                  <a routerLink="/points" [queryParams]="{world: world}"><span [outerHTML]="world | WorldNamePipe"></span></a>
+	                  </td>
 	                </tr>
 	                <!--<tr>-->
 		                <!--<th>Index code</th>-->
@@ -210,7 +212,7 @@
 		                </th>
 		                <td>
 			                <div *ngFor="let owner of data.owners" matTooltip="Your intel is shared with allied alliances. You will see their intel, and they will see your intel. You can not see intel about each other's towns.">
-				                <p class="gd-primary"><img src="../../assets/images/ally_ico.png" style="margin-top: -4px;"/> {{owner.alliance_name}}</p>
+				                <p class="gd-primary"><img src="../../../assets/images/ally_ico.png" style="margin-top: -4px;"/> {{owner.alliance_name}}</p>
 			                </div>
 		                </td>
 	                </tr>
@@ -252,7 +254,7 @@
 
 		            <!--Most contributions-->
 		            <!--<div *ngIf="toggleMore" class="hidden-xs hidden-sm">-->
-			            <!--<mat-card class="index-card">-->
+			            <!--<mat-card class="dense-card">-->
 				            <!--<mat-card-title>-->
 					            <!--<div fxLayout="row">-->
 						            <!--<h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Most contributions</span></h4>-->
@@ -312,7 +314,7 @@
         </ng-template>
 
         <ng-template #players>
-          <mat-card class="index-card" style="max-height: 400px; height: 400px; min-height: 400px;">
+          <mat-card class="dense-card" style="max-height: 400px; height: 400px; min-height: 400px;">
             <mat-card-title>
               <div class="form-group row" style='margin: 0px;'>
                 <h3 style='font-weight: 300; color: #304357; margin-top: 0 !important;'><span class='world-title' style='color: #18BC9C;'>Most indexed players</span>
@@ -359,7 +361,7 @@
         </ng-template>
 
         <ng-template #allys>
-          <mat-card class="index-card" style="max-height: 400px; height: 400px; min-height: 400px;">
+          <mat-card class="dense-card" style="max-height: 400px; height: 400px; min-height: 400px;">
             <mat-card-title>
               <div class="form-group row" style='margin: 0px;'>
                 <h3 style='font-weight: 300; color: #304357; margin-top: 0 !important;'><span class='world-title' style='color: #18BC9C;'>Most indexed alliances</span>
@@ -568,54 +570,5 @@
       </div>
     </div>
   </div>
-  <!--<div *ngIf="moved">-->
-    <!--<mat-card class="index-card index-overview decorated-card">-->
-      <!--<mat-card-title class='decorated-card-header decorated-title'>-->
-        <!--<div class="container-fluid">-->
-          <!--&lt;!&ndash;suppress XmlDuplicatedId &ndash;&gt;-->
-          <!--<div class="row" id="timeline">-->
-            <!--<div class="col-xs-12 col-sm-0 col-md-1 col-lg-2 text-right">-->
-              <!--<div class="col-12">-->
-                <!--<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/indexer/0">-->
-                  <!--<i class="fa fa-arrow-left"></i>&nbsp;<span class="hidden-sm hidden-md">Indexer homepage</span><span class="hidden-xs hidden-lg">Home</span>-->
-                <!--</button>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 text-center">-->
-              <!--<h1><i class="fa fa-university gd-secondary" aria-hidden="true"></i>&nbsp;Enemy city index</h1>-->
-              <!--<h3>-->
-                <!--&nbsp;&nbsp;&nbsp;Key: <span class='world-title gd-secondary'>{{key}}</span>-->
-              <!--</h3>-->
-            <!--</div>-->
-            <!--<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 text-right">-->
-
-              <!--<div class="col-12">-->
-                <!--<button mat-button class="mat-raised-button bg-gd-2" style="width: 100%;" (click)="indexDisclaimer()">-->
-                  <!--<i class="fa fa-info"></i> Frequently asked questions-->
-                <!--</button>-->
-              <!--</div>-->
-
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</mat-card-title>-->
-      <!--<mat-card-content class="decorated-card-content">-->
-
-        <!--<br/>-->
-        <!--<br/>-->
-
-        <!--<div class="container">-->
-          <!--<div class="col-xs-12 alert alert-info text-center">-->
-            <!--<h1><strong>Sorry,</strong> this index has been moved by the index owner!</h1>-->
-            <!--<h3>Contact the owner of this index to get a new link to the moved index.</h3>-->
-          <!--</div>-->
-        <!--</div>-->
-
-        <!--<br/>-->
-        <!--<br/>-->
-
-      <!--</mat-card-content>-->
-    <!--</mat-card>-->
-  <!--</div>-->
 
 </div>
