--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -16,7 +16,7 @@
     <mat-card-content *ngIf="!notFound">
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card class="index-card" fxFlex="25">
+        <mat-card class="dense-card" fxFlex="25">
           <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
             <h1 class="gd-white entity-name">
               <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/></div> {{playerName}}
@@ -97,18 +97,6 @@
                   </td>
 	                <td *ngIf="!def">0</td>
                 </tr>
-                <!--<tr *ngIf="bShowHeatmapTab">-->
-                  <!--<th>Best time to attack</th>-->
-                  <!--<td>-->
-                    <!--<a (click)="setActiveTab('heatmap')" class="a-link">~ {{lowestIndex<10?'0':''}}{{lowestIndex}}:00h <i class="fa fa-arrow-circle-right"></i></a>-->
-                  <!--</td>-->
-                <!--</tr>-->
-                <!--<tr *ngIf="hasIndex!=''">-->
-                  <!--<th>Town intelligence</th>-->
-                  <!--<td>-->
-                      <!--<a (click)="setActiveTab('intel')" class="a-link">{{hasIndex}} <i class="fa fa-arrow-circle-right"></i></a>-->
-                  <!--</td>-->
-                <!--</tr>-->
               </tbody>
             </table>
 
@@ -153,7 +141,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="index-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
+        <mat-card class="dense-card" fxFlex="75" style="padding-bottom: 0px !important; padding-top: 10px !important;">
 	        <div #infoTabs style="width: 100%;"></div>
           <mat-tab-group [selectedIndex]="tabsIndex" (selectedTabChange)="onTabClick($event)" mat-stretch-tabs>
             <mat-tab class="history-chart" style="padding: 20px 0; overflow: hidden !important;">
@@ -341,9 +329,9 @@
 	              <span class="hidden-xs">Town intelligence</span>
 	              <span class="hidden-md hidden-sm hidden-lg">Intel</span>
               </ng-template>
-              <app-index-player *ngIf="bShowIntel && hasIndex!=''" [world]="world" [key]="hasIndex" [id]="id" [embedded]="true"></app-index-player>
-	            <h3 style="padding: 30px;" *ngIf="!bShowIntel && hasIndex!=''"><a class="a-link-dialog" style="color: #334254 !important;" (click)="bShowIntel = true;">Load town intel..</a></h3>
-              <div *ngIf="hasIndex==''" style="padding: 20px;">
+              <app-index-player *ngIf="bShowIntel && hasIndex" [world]="world" [id]="id" [embedded]="true"></app-index-player>
+	            <h3 style="padding: 30px;" *ngIf="!bShowIntel && hasIndex"><a class="a-link-dialog" style="color: #334254 !important;" (click)="bShowIntel = true;">Load town intelligence..</a></h3>
+              <div *ngIf="!bShowIntel || !hasIndex" style="padding: 20px;">
 	              <div class="container-fluid">
 		              <div class="row">
 			              <div class="col-xs-12 col-sm-8">
@@ -376,7 +364,7 @@
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="5px">
 
-        <mat-card class="index-card" fxFlex fxFlex.gt-md="57" fxFlex.gt-sm="100">
+        <mat-card class="dense-card" fxFlex fxFlex.gt-md="57" fxFlex.gt-sm="100">
           <mat-card-title>
             <div fxLayout="row">
               <h4 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>History</span></h4>
@@ -454,7 +442,7 @@
           </mat-card-content>
         </mat-card>
 
-        <mat-card class="index-card" fxFlex fxFlex.gt-md="43" fxFlex.gt-sm="100">
+        <mat-card class="dense-card" fxFlex fxFlex.gt-md="43" fxFlex.gt-sm="100">
           <mat-card-content>
 
 	          <app-conquest [embedded]="true" [params]="{type: 'player', world: world, id: id}"></app-conquest>
