--- a/src/app/shared/dialogs/index-settings/index-settings.component.html
+++ b/src/app/shared/dialogs/index-settings/index-settings.component.html
@@ -6,12 +6,16 @@
 				<h2 class="gd-secondary">Settings for index <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: middle;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
 
 				<div class="alert alert-gd-1">
-					<h2 class="gd-secondary">Friendly alliances (index owners)</h2>
+					<h2 class="gd-secondary"><mat-slide-toggle class="settings-toggle"></mat-slide-toggle> Show intel about allied towns</h2>
+					<p>If you enable this option, intel for your own towns and your allies' towns will be available in this index.</p>
 				</div>
 			</div>
 			<div class="col-xs-12">
 				<div class="alert alert-gd-1">
-					<h2 class="gd-secondary">General index settings</h2>
+					<h2 class="gd-secondary"><mat-slide-toggle class="settings-toggle"></mat-slide-toggle> Automatically delete old intel</h2>
+					<p>If you enable this option, old intel will be deleted after a number of days, and only if there is newer intel for that specific town.
+					<br/>Old intel will not be removed if it is the only known intelligence for that town.
+					</p>
 				</div>
 			</div>
 		</div>
